<resources>
    <string name="app_name">TabsTable</string>
    <string name="title_activity_course_table">Course Table</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_3">tAB 3</string>
    <string name="tab_text_4">tAB 4</string>
    <string name="tab_text_5">tAB 5</string>
    <string name="tab_text_6">tAB 6</string>
    <string name="tab_text_7">tAB 7</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="tabs_panel">tabs panel</string>
    <string name="tabs_panel_heading">Tabs Panel</string>


    <string name="subject_title">Subject Title</string>
    <string name="subject_name">Subject Name</string>
    <string name="lecturer">Lecturer</string>
    <string name="location">Location</string>
    <string name="date_and_time">Date and Time</string>
    <string name="save">Save</string>
    <string name="select_day_and_time">Select Day and Time</string>
    <string name="time_in">Time-In</string>
    <string name="time_out">Time-Out</string>
    <string name="task_name">Task Name</string>

    <string name="time_of_task">Time of task</string>
    <string name="name_of_task">Name of task</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="reference">Reference</string>
    <string name="date_of_task">Date of task</string>
    <string name="references">References</string>
    <string name="save_task_menu">save_task_menu</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="task_assignment">Task/Assignment</string>
    <string name="exam_test">Exam/Test</string>


    <string-array name="subject_title">
        <item> "Course Table"</item>
        <item> "Exam Table"</item>
    </string-array>

    <string-array name="days_of_week">
        <item> "Days"</item>
        <item> "Monday"</item>
        <item> "Tuesday"</item>
        <item> "Wednesday</item>
        <item> "Thursday"</item>
        <item> "Friday"</item>
        <item> "Saturday"</item>
    </string-array>

    <string-array name="event_task">
        <item> "Assignment/Task"</item>
        <item> "Exam/Test"</item>
    </string-array>

</resources>
