<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/nested_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="47dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/spinner">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subject_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subject_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lecturer_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lecturer" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/day_spinner"
                    android:layout_width="157dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:translationZ="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/time_in"
                    app:layout_constraintEnd_toStartOf="@+id/time_in"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/time_in" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/select_day_and_time"
                    app:layout_constraintStart_toStartOf="@+id/location_layout"
                    app:layout_constraintTop_toBottomOf="@+id/location_layout" />

                <EditText
                    android:id="@+id/time_in"
                    android:layout_width="102dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/time_in"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/time_out"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/day_spinner"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/time_out"
                    android:layout_width="105dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/time_out"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/time_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/time_in"
                    app:layout_constraintTop_toTopOf="@+id/time_in"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                    app:layout_constraintVertical_bias="0.409"
                    app:srcCompat="@drawable/ic_text_format_black_24dp"
                    android:contentDescription="@string/subject_title" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="12dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
                    app:srcCompat="@drawable/ic_assignment_black_24dp"
                    android:contentDescription="@string/subject_name"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout5"
                    app:srcCompat="@drawable/ic_person_outline_black_24dp"
                    android:contentDescription="@string/lecturer"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/location_layout"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/location_layout"
                    app:srcCompat="@drawable/ic_my_location_black_24dp"
                    android:contentDescription="@string/location"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    android:contentDescription="@string/select_day_and_time"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>